# rocqblueprint

./: .gitignore  MANIFEST.in  NOTICE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
rocqblueprint/: client.py
rocqblueprint/jekyll_templates/: _config.yml  index.md
rocqblueprint/jekyll_templates/_layouts/: default.html
rocqblueprint/templates/: blueprint.yml  plastex.cfg
rocqblueprint/templates/macros/: common.tex  print.tex
